# rawtherapee-convert

./: .gitignore  LICENSE  README.md  rawtherapee-convert.cabal  shell.nix  stack.yaml
lib/Graphics/: RawTherapeeConvert.hs
src/: Main.hs
test/: TestMain.hs
test/Graphics/RawTherapeeConvert/: Test.hs
test/resources/: IMG_3695.CR2.pp3
